[package]
name = "crate_dl"
version = "1.0.0"
edition = "2021"
description = "Crate to build local cargo cache."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
aes = "*"
approx = "*"
arrayvec = "*"
base64 = "*"
bio = "*"
bitvec = "*"
bytes = "*"
chrono = "*"
clap = "*"
dirs = "*"
fastrand = "*"
flate2 = "*"
futures = "*"
geo = "*"
git2 = "*"
hex = "*"
itertools = "*"
libc = "*"
log = "*"
mime = "*"
nalgebra = "*"
ndarray = "*"
nom = "*"
num_cpus = "*"
num-traits = "*"
pkg-config = "*"
quote = "*"
rand = "*"
regex = "*"
reqwest = "*"
semver = "*"
serde = "*"
sha1 = "*"
sha2 = "*"
sha3 = "*"
sha256 = "*"
smallvec = "*"
statrs = "*"
tempfile = "*"
termcolor = "*"
tinyvec = "*"
tokio = "*"
tokio-util = "*"
toml = "*"
uuid = "*"
