[package]
name = "crate_dl"
version = "1.0.0"
edition = "2021"
description = "Crate to build local cargo cache."
license = "MIT"
readme = "README.md"

[dependencies]
aes = "*"
approx = "*"
arrayvec = "*"
astro = "*"
base64 = "*"
bio = "*"
bitvec = "*"
blas = "*"
bytes = "*"
chrono = "*"
clap = "*"
dirs = "*"
fastrand = "*"
flate2 = "*"
futures = "*"
geiger = "*"
geo = "*"
git2 = "*"
graph = "*"
hex = "*"
hyper = "*"
iced = "*"
image = "*"
itertools = "*"
libc = "*"
log = "*"
mime = "*"
nalgebra = "*"
ndarray = "*"
nom = "*"
num_cpus = "*"
num-traits = "*"
pgfplots = "*"
pkg-config = "*"
plotchart = "*"
plotlib = "*"
plotters = "*"
plotters-svg = "*"
polars = "*"
quote = "*"
rand = "*"
regex = "*"
reqwest = "*"
rusqlite = "*"
sea-query = "*"
sea-schema = "*"
semver = "*"
serde = "*"
sha1 = "*"
sha2 = "*"
sha3 = "*"
sha256 = "*"
smallvec = "*"
smartcore = "*"
statrs = "*"
tectonic = "*"
tempfile = "*"
termcolor = "*"
textwrap = "*"
time = "*"
tinyvec = "*"
tokenizers  = "*"
tokio = "*"
tokio-util = "*"
toml = "*"
tracing = "*"
uuid = "*"
