[package]
name = "crate_dl"
version = "1.0.0"
edition = "2021"
description = "Crate to build local cargo cache."
license = "MIT"
readme = "README.md"

[dependencies]
aes = "*"
approx = "*"
argmin = "*"
arrayvec = "*"
astro = "*"
base64 = "*"
bio = "*"
bitvec = "*"
blas = "*"
blas-src = "*"
bytes = "*"
chrono = "*"
clap = "*"
criterion = "*"
criterion-plot = "*"
dirs = "*"
euclid = "*"
fastrand = "*"
flate2 = "*"
futures = "*"
geiger = "*"
geo = "*"
git2 = "*"
graph = "*"
hex = "*"
hyper = "*"
iced = "*"
image = "*"
indexmap = "*"
itertools = "*"
libc = "*"
log = "*"
mime = "*"
nalgebra = "*"
ndarray = "*"
ndarray-rand = "*"
ndarray-stats = "*"
nom = "*"
noodles = "*"
noodles-bam = "*"
noodles-fasta = "*"
noodles-fastq = "*"
noodles-sam = "*"
noodles-util = "*"
noodles-vcf = "*"
num-bigint = "*"
num_cpus = "*"
num-traits = "*"
peroxide = "*"
pgfplots = "*"
pkg-config = "*"
plotchart = "*"
plotlib = "*"
plotters = "*"
plotters-backend = "*"
plotters-svg = "*"
polars = "*"
polars-io = "*"
poloto = "*"
quote = "*"
rand = "*"
regex = "*"
reqwest = "*"
rstats = "*"
rug = "*"
rusqlite = "*"
rust_decimal = "*"
rustfft = "*"
sea-query = "*"
sea-schema = "*"
semver = "*"
serde = "*"
sha1 = "*"
sha2 = "*"
sha256 = "*"
sha3 = "*"
smallvec = "*"
smartcore = "*"
statrs = "*"
tectonic = "*"
tempfile = "*"
termcolor = "*"
textwrap = "*"
time = "*"
tinyvec = "*"
tokenizers  = "*"
tokio = "*"
tokio-util = "*"
toml = "*"
tracing = "*"
uuid = "*"
